add search room, booking
